--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
 # Scripts to be run such as tests
 before_script:
   - echo "no tests"
+  - echo "docker ..."
 
 script:
   - docker --version # print the version for logging
